k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e-shop
  labels:
    app: e-shop
    environment: production
